--- a/index.html
+++ b/index.html
@@ -1,114 +1,100 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DoomScroll</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
       background: black;
-      touch-action: none;
       height: 100%;
       overflow-x: hidden;
-    }
-
-    #scroll-wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      height: 100%;
+      touch-action: none;
     }
 
     #scroll-container {
       width: 100vw;
-      height: auto;
-      display: flex;
-      flex-direction: column;
     }
 
     .block {
       height: 100vh;
+      width: 100%;
       background: white;
-      border-bottom: 24px solid black;
+      margin-bottom: 24px;
     }
 
     canvas {
       position: fixed;
       top: 0;
       left: 0;
+      z-index: 10;
       pointer-events: none;
-      z-index: 1000;
     }
   </style>
 </head>
 <body>
-  <div id="scroll-wrapper">
-    <div id="scroll-container">
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-    </div>
-  </div>
-  <canvas id="brush"></canvas>
+  <div id="scroll-container"></div>
+  <canvas id="canvas"></canvas>
+
   <script>
-    const canvas = document.getElementById('brush');
+    // Create lots of white blocks
+    const container = document.getElementById('scroll-container');
+    for (let i = 0; i < 30; i++) {
+      const block = document.createElement('div');
+      block.className = 'block';
+      container.appendChild(block);
+    }
+
+    // Brush drawing setup
+    const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
     let width = window.innerWidth;
     let height = window.innerHeight;
     canvas.width = width;
     canvas.height = height;
 
-    let touches = {};
-    const fadeOut = () => {
+    let drawing = false;
+    let lastX, lastY;
+    let opacity = 0;
+
+    function draw(x, y, pressure = 0.1) {
+      ctx.beginPath();
+      ctx.fillStyle = `rgba(255, 0, 0, ${opacity})`;
+      ctx.ellipse(x, y, 30, 30, 0, 0, 2 * Math.PI);
+      ctx.fill();
+    }
+
+    function fadeCanvas() {
       ctx.fillStyle = 'rgba(255,255,255,0.05)';
-      ctx.fillRect(0, 0, width, height);
-    };
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+    }
 
-    const draw = () => {
-      fadeOut();
-      Object.values(touches).forEach(touch => {
-        ctx.beginPath();
-        ctx.fillStyle = `rgba(255,0,0,${Math.min(1, touch.age / 40)})`;
-        ctx.ellipse(touch.x, touch.y, 40, 40, 0, 0, Math.PI * 2);
-        ctx.fill();
-        touch.age += 1;
-      });
-      requestAnimationFrame(draw);
-    };
+    setInterval(fadeCanvas, 50);
 
-    window.addEventListener('resize', () => {
-      width = window.innerWidth;
-      height = window.innerHeight;
-      canvas.width = width;
-      canvas.height = height;
-    });
+    function updatePosition(e) {
+      const x = e.touches ? e.touches[0].clientX : e.clientX;
+      const y = e.touches ? e.touches[0].clientY : e.clientY;
+      if (drawing) {
+        draw(x, y);
+      }
+    }
 
-    const updateTouch = (id, x, y) => {
-      touches[id] = { x, y, age: 1 };
-    };
+    function startDraw(e) {
+      drawing = true;
+      opacity = 0.1;
+      updatePosition(e);
+    }
 
-    const removeTouch = id => {
-      delete touches[id];
-    };
+    function endDraw() {
+      drawing = false;
+      opacity = 0;
+    }
 
-    const handleMove = e => {
-      for (const t of e.touches) updateTouch(t.identifier, t.clientX, t.clientY);
-    };
-
-    window.addEventListener('touchstart', handleMove);
-    window.addEventListener('touchmove', handleMove);
-    window.addEventListener('touchend', e => {
-      for (const t of e.changedTouches) removeTouch(t.identifier);
-    });
-
-    draw();
+    document.addEventListener('touchstart', startDraw);
+    document.addEventListener('touchmove', updatePosition);
+    document.addEventListener('touchend', endDraw);
   </script>
 </body>
 </html>
