--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,80 +20,71 @@
       align-items: center;
     }
 
-    .scroll-block {
+    .block {
       width: 90vw;
       height: 100vh;
-      background: radial-gradient(circle at center, white 50%, rgba(0, 0, 0, 0.8) 100%);
       margin: 10vh 0;
-      border-radius: 60px;
+      border-radius: 50px;
+      background: radial-gradient(ellipse at center, white 0%, #111 100%);
+      box-shadow: 0 0 200px 100px black;
       position: relative;
-      box-shadow: 0 0 80px 80px black inset;
+      overflow: hidden;
     }
 
     canvas {
-      position: fixed;
+      position: absolute;
       top: 0;
       left: 0;
       pointer-events: none;
-      z-index: 9999;
     }
   </style>
 </head>
 <body>
   <div id="scroll-wrapper">
-    <div class="scroll-block"></div>
-    <div class="scroll-block"></div>
-    <div class="scroll-block"></div>
-    <div class="scroll-block"></div>
-    <div class="scroll-block"></div>
+    <div class="block"><canvas></canvas></div>
+    <div class="block"><canvas></canvas></div>
+    <div class="block"><canvas></canvas></div>
+    <div class="block"><canvas></canvas></div>
   </div>
-  <canvas id="brush"></canvas>
+
   <script>
-    const canvas = document.getElementById('brush');
-    const ctx = canvas.getContext('2d');
-    let width = window.innerWidth;
-    let height = window.innerHeight;
-    canvas.width = width;
-    canvas.height = height;
+    const blocks = document.querySelectorAll('.block');
 
-    let touches = [];
+    blocks.forEach(block => {
+      const canvas = block.querySelector('canvas');
+      const ctx = canvas.getContext('2d');
+      canvas.width = block.clientWidth;
+      canvas.height = block.clientHeight;
 
-    function draw() {
-      ctx.clearRect(0, 0, width, height);
-      ctx.lineCap = 'round';
+      let touches = [];
 
-      for (let i = 0; i < touches.length; i++) {
-        const t = touches[i];
-        let opacity = 1 - (i / touches.length);
-        let radius = 40 - (i / touches.length) * 30;
-        ctx.beginPath();
-        ctx.fillStyle = `rgba(255, 0, 0, ${opacity})`;
-        ctx.arc(t.x, t.y, radius, 0, Math.PI * 2);
-        ctx.fill();
+      block.addEventListener('touchmove', e => {
+        const rect = canvas.getBoundingClientRect();
+        for (let t of e.touches) {
+          touches.push({
+            x: t.clientX - rect.left,
+            y: t.clientY - rect.top,
+            radius: 50,
+            alpha: 1.0
+          });
+        }
+      });
+
+      function draw() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        touches = touches.filter(dot => dot.alpha > 0.01);
+        for (let dot of touches) {
+          ctx.beginPath();
+          ctx.fillStyle = `rgba(255,0,0,${dot.alpha})`;
+          ctx.ellipse(dot.x, dot.y, dot.radius * dot.alpha, dot.radius * dot.alpha, 0, 0, Math.PI * 2);
+          ctx.fill();
+          dot.alpha *= 0.92;
+        }
+        requestAnimationFrame(draw);
       }
 
-      requestAnimationFrame(draw);
-    }
-
-    function handleTouch(e) {
-      e.preventDefault();
-      for (let touch of e.touches) {
-        touches.push({ x: touch.clientX, y: touch.clientY });
-      }
-      if (touches.length > 40) touches.splice(0, touches.length - 40);
-    }
-
-    canvas.addEventListener('touchmove', handleTouch, { passive: false });
-    canvas.addEventListener('touchstart', handleTouch, { passive: false });
-
-    window.addEventListener('resize', () => {
-      width = window.innerWidth;
-      height = window.innerHeight;
-      canvas.width = width;
-      canvas.height = height;
+      draw();
     });
-
-    draw();
   </script>
 </body>
 </html>
