--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       padding: 0;
       background: black;
       touch-action: none;
-      height: 100%;
       overflow-x: hidden;
     }
 
@@ -18,14 +17,15 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      gap: 100px; /* spacing between blocks */
+      padding: 100px 0;
     }
 
     .block {
       width: 90vw;
-      height: 100vh;
-      margin: 10vh 0;
+      height: 90vh;
       border-radius: 50px;
-      background: radial-gradient(ellipse at center, white 0%, #111 100%);
+      background: radial-gradient(ellipse at center, white 0%, #000 100%);
       box-shadow: 0 0 200px 100px black;
       position: relative;
       overflow: hidden;
