--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 100px; /* spacing between blocks */
+      gap: 120px;
       padding: 100px 0;
     }
 
     .block {
       width: 90vw;
       height: 90vh;
-      border-radius: 50px;
-      background: radial-gradient(ellipse at center, white 0%, #000 100%);
-      box-shadow: 0 0 200px 100px black;
+      border-radius: 60px;
+      background: radial-gradient(circle at center, white 0%, #111 85%, black 100%);
+      box-shadow: 0 0 120px 60px black;
       position: relative;
       overflow: hidden;
     }
@@ -41,6 +41,7 @@
 </head>
 <body>
   <div id="scroll-wrapper">
+    <div class="block"><canvas></canvas></div>
     <div class="block"><canvas></canvas></div>
     <div class="block"><canvas></canvas></div>
     <div class="block"><canvas></canvas></div>
@@ -76,7 +77,7 @@
         for (let dot of touches) {
           ctx.beginPath();
           ctx.fillStyle = `rgba(255,0,0,${dot.alpha})`;
-          ctx.ellipse(dot.x, dot.y, dot.radius * dot.alpha, dot.radius * dot.alpha, 0, 0, Math.PI * 2);
+          ctx.ellipse(dot.x, dot.y, dot.radius * dot.alpha, dot.radius * dot.alpha * 0.7, 0, 0, Math.PI * 2);
           ctx.fill();
           dot.alpha *= 0.92;
         }
